--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rutie = {version="0.8.2"}
+rutie = "0.8.2"
+lazy_static = "1.4.0"
 
 [lib]
 crate-type = ["cdylib"]
