--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rutie = "0.8.2"
+rutie = { path = "/Users/y/personal/mp/rusy" }
 lazy_static = "1.4.0"
 concat-idents = "1.1.5"
 
